--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </span>
         </span>
       </label>
-      <select id="routeShortNameSelect" multiple size="4" class="filter-select"style="min-width: 120px; max-width: 300px;"></select>
+      <select id="routeShortNameSelect" multiple size="4" class="filter-select"style="min-width: 120px;"></select>
       <button type="button" id="selectAllRouteName" class="select-all-btn">Select All</button>
     </div>
 
@@ -176,7 +176,7 @@
     </div>
     <!-- Compare Services tabs -->
     <div id="compareServiceDatesTab" class="tab-content">
-      <div style="display:flex; gap:24px; align-items:flex-end; margin-bottom:10px;">
+      <div style="display:flex; gap:12px; align-items:flex-end; margin-bottom:10px;">
         <label>
           Service-Date 1:
           <select id="compareServiceDate1" style="min-width:120px;"></select>
