--- a/index.html
+++ b/index.html
@@ -151,7 +151,17 @@
     <!-- trips per hour plot -->
     <div id="tripsPerHourTab" class="tab-content">
       <div id="tripsPerHourAnnotation" style="color: #b00; display:none"></div>
-      <canvas id="tripsPerHourPlot"></canvas>
+
+      <!-- changed: wrapper with headway help icon + tooltip -->
+      <div class="trips-per-hour-chart-wrapper" style="position:relative;">
+        <span class="headway-help" role="button" aria-label="Headway help" tabindex="0">?
+          <span class="help-tooltiptext" role="tooltip">
+            The headway is estimated by the number of trips scheduled in this hour. If the route contains multiple patterns with different lengths, they are weighted to the most common trip pattern. For example, if the most common trip pattern of the route is 30 km, a 60 km trip would count as 2 trips in estimating the line headway.
+          </span>
+        </span>
+
+        <canvas id="tripsPerHourPlot"></canvas>
+      </div>
     </div>
   </div>
   <div id = "graphResizer" class="resizer"></div>
@@ -216,30 +226,61 @@
     Help &amp; Instructions
     <button class="close-canvas-btn" style="margin-left:auto; background:none; border:none; color:#fff; font-size:1.3em; cursor:pointer;">✖</button>
   </div>
+  <!-- changed: clearer hierarchical help content with section headers matching ribbon/canvases -->
   <div class="canvas-content">
-    <h3>Welcome to Transit Bunny!</h3>
-    <h4>A tool that lets you look inside the GTFS transit schedule</h4>
+    <h3><strong>Welcome to Transit Bunny!</strong></h3>
+    <p>A tool that lets you unpack GTFS transit schedule.</p>
+
+    <h4><strong>Loading Data</strong></h4>
     <ul>
-      <li> The page loads a version of the Vancouver GTFS dataset on startup, but you can load your own GTFS data! Click the <b>Load My Own GTFP ZIP:</b> button to load your transit data. The file format must be a ".zip" file containing standard static GTFS files such as "routes.txt", "trips.txt", etc.</li>
-      <li> The "clouds" with numbers represent the stops in the area.</li>
-      <li><b>Filter Trips:</b> Use the filters to select route types, route names, and service patterns. Hover over the <b>filter labels</b> for more details. Click <b>Update Map</b> to update the map to match your selection </li>
-      <li><b>Animation Controls:</b> Open the <b>Animation Controls</b> panel (▶️) to play, pause, or stop the animation. Adjust the speed as needed</li>
-      <li><b>Graphs:</b> Open the <b>Graphs</b> panel (📈) with these graph options. <b>Graphs update in sync with the animation progress</b>
+      <li>The page starts with a default Vancouver GTFS dataset from August 2025</li>
+      <li>To load your own data to explore: click <strong>Load My Own GTFS ZIP</strong>. Nearly all transit agencies publish their gtfs on the web as a zip file, and usually this zip file can be used directly here.
+        The zip file should contain the typical GTFS files including:</li>
         <ul>
-          <li><b>Number of Trips:</b> Shows the number of active vehicles over time</li>
-          <li><b>Vehicle-Kilometer:</b> Shows cumulative vehicle-kilometers by route</li>
-          <li><b>Headway:</b> Shows the estimated headways by route</li>          
+          <li>routes.txt</li>
+          <li>trips.txt</li>
+          <li>shapes.txt</li>
+          <li>stop_times.txt</li>
+          <li>etc.</li>
         </ul>
-      <li>You can multi-select two service-dates to animate! The plots will plot them separately for easier comparison !</li>
-      <li><b>Statistics:</b> Open the <b>Statistics</b> panel (📊) for route-level stats. You can download the table as CSV. The statistics are independent from the animation progress</li>
-      <li><b>Transit Score:</b> Open the <b>Transit Score</b> panel (⭐). Then click anywhere on the map and the tool will give a score for that location based on the transit services in its proximity</li>
     </ul>
+
+    <h4><strong>Trip Filters</strong></h4>
+    <ul>
+      <li>Use <strong>Route Type</strong>, <strong>Route Name</strong>, and <strong>Service/Date</strong> to limit which trips are shown and animated.</li>
+      <li>Multi-select is supported — pick up to two service-dates for side-by-side comparison.</li>
+      <li> [Optional] Click <strong>Update Map</strong> after changing filters to refresh stops and route shapes.</li>
+    </ul>
+
+    <h4><strong>Animation</strong></h4>
+    <ul>
+      <li>Open <strong>Animation</strong> (ribbon) to access playback controls: Play, Pause/Resume, Stop and Speed.</li>      
+    </ul>
+
+    <h4><strong>Graphs</strong></h4>
+    <ul>
+      <li> There are 3 plots available: number of vehicles over time, vehicle‑kilometers, and headways.</li>
+      <li> Graphs update in sync with animation progress [i.e. a complete graph requires a complete animation] </li>
+    </ul>
+
+    <h4><strong>Statistics</strong></h4>
+    <ul>
+      <li> Generate route-specific statistics, or compare service dates to see their difference</li>
+      <li> This could be helpful for analyzing the magnitude of service changes between two dates!</li>
+    </ul>
+
+    <h4><strong>Transit Score</strong></h4>
+    <ul>
+      <li> Click any map location to compute an accessibility score </li>
+      <li> This score is an approximation intended for quick exploration and not a formal metric!</li>
+    </ul>
+
     <p style="font-size:0.95em; color:#2400f3;">
-      Want more helps or features? Contact me on
+      Want more features or help? Contact me (Luke Li) on
       <a href="https://www.linkedin.com/in/luke-li-05445086/" target="_blank" style="color:#0078d7; text-decoration:underline;">LinkedIn</a>.
-      - Luke Li
     </p>
-    <img src="barcode_linkedin_lukeli.jpg" alt="Barcode" style="display:block; margin: 18px auto 0 auto; max-width:220px;">  </div>
+    <img src="barcode_linkedin_lukeli.jpg" alt="Barcode" style="display:block; margin: 18px auto 0 auto; max-width:220px;">
+  </div>
 </div>
 
 <!-- Add after other floating canvases -->
